dist/ffi/include/sekejap.h

typedef int32_t SekejapDirection;
typedef int32_t SekejapStatus;
typedef struct SekejapDb SekejapDb;
typedef struct SekejapScan SekejapScan;
typedef struct SekejapStmt SekejapStmt;
typedef struct SekejapTx SekejapTx;
SekejapDb *sekejap_open(const char *path);
SekejapDb *sekejap_open_with_config(const char *path, const char *config_json);
SekejapDb *sekejap_open_service(const char *path);
void sekejap_close(SekejapDb *db);
const char *sekejap_version(void);
int32_t sekejap_format_version(void);
char *sekejap_last_error(const SekejapDb *db);
SekejapStatus sekejap_last_error_code(const SekejapDb *db);
void sekejap_string_free(char *s);
int32_t sekejap_put(SekejapDb *db,
                    const char *collection,
                    const char *key,
                    const char *document_json);
long sekejap_put_many(SekejapDb *db, const char *collection, const char *rows_json);
char *sekejap_get(SekejapDb *db, const char *collection, const char *key);
int32_t sekejap_exists(SekejapDb *db, const char *collection, const char *key);
int32_t sekejap_delete(SekejapDb *db, const char *collection, const char *key);
SekejapScan *sekejap_scan_open(SekejapDb *db, const char *collection, uintptr_t page_rows);
char *sekejap_scan_next(SekejapScan *scan);
void sekejap_scan_close(SekejapScan *scan);
long sekejap_execute(SekejapDb *db, const char *sql, const char *params_json);
char *sekejap_query(SekejapDb *db, const char *sql, const char *params_json);
char *sekejap_explain(SekejapDb *db, const char *sql, const char *params_json);
SekejapStmt *sekejap_prepare(SekejapDb *db, const char *sql);
char *sekejap_stmt_query(SekejapStmt *stmt, const char *params_json);
long sekejap_stmt_execute(SekejapStmt *stmt, const char *params_json);
int32_t sekejap_stmt_rebindable(const SekejapStmt *stmt);
void sekejap_stmt_free(SekejapStmt *stmt);
SekejapScan *sekejap_query_open(SekejapDb *db,
                                const char *sql,
                                const char *params_json,
                                uintptr_t page_rows);
char *sekejap_query_next(SekejapScan *scan);
void sekejap_query_close(SekejapScan *scan);
int32_t sekejap_link(SekejapDb *db,
                     const char *from_collection,
                     const char *from_key,
                     const char *edge_type,
                     const char *to_collection,
                     const char *to_key);
int32_t sekejap_link_with(SekejapDb *db,
                          const char *from_collection,
                          const char *from_key,
                          const char *edge_type,
                          const char *to_collection,
                          const char *to_key,
                          const char *properties_json);
int32_t sekejap_unlink(SekejapDb *db,
                       const char *from_collection,
                       const char *from_key,
                       const char *edge_type,
                       const char *to_collection,
                       const char *to_key);
char *sekejap_neighbours(SekejapDb *db,
                         const char *collection,
                         const char *key,
                         const char *edge_type,
                         SekejapDirection direction,
                         uintptr_t limit);
int32_t sekejap_create_collection(SekejapDb *db, const char *name, const char *fields_json);
int32_t sekejap_drop_collection(SekejapDb *db, const char *name);
char *sekejap_collections(SekejapDb *db);
char *sekejap_describe(SekejapDb *db, const char *collection);
long sekejap_count_rows(SekejapDb *db, const char *collection);
long sekejap_scan_count_rows(SekejapDb *db, const char *collection);
long sekejap_scan_count_edges(SekejapDb *db);
SekejapTx *sekejap_tx_begin(SekejapDb *db);
int32_t sekejap_tx_put(SekejapTx *tx,
                       const char *collection,
                       const char *key,
                       const char *document_json);
int32_t sekejap_tx_delete(SekejapTx *tx, const char *collection, const char *key);
int32_t sekejap_tx_link(SekejapTx *tx,
                        const char *from_collection,
                        const char *from_key,
                        const char *edge_type,
                        const char *to_collection,
                        const char *to_key);
long sekejap_tx_execute(SekejapTx *tx, const char *sql, const char *params_json);
int32_t sekejap_tx_commit(SekejapTx *tx);
int32_t sekejap_tx_rollback(SekejapTx *tx);
int32_t sekejap_checkpoint(SekejapDb *db);
int32_t sekejap_publish(SekejapDb *db);